CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT("NIDS")
SET(PROJECT_VERSION_MAJOR 0)
SET(PROJECT_VERSION_MINOR 1)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_VERBOSE_MAKEFILE true)

SET(OUTPUT_ELF main.out) 
SET(SRC_FILES
	main.c
	./src/ui.c
	./src/print.c
	./src/pkt_parser.c
)

SET(CMAKE_C_COMPLIER "gcc")

INCLUDE_DIRECTORIES(./hdr)

LINK_LIBRARIES(pcap)

SET(CMAKE_C_FLAGS_DEBUG "-g")

ADD_EXECUTABLE(${OUTPUT_ELF} ${SRC_FILES})

